--- a/Travel-Company.WPF/Resources/Localizations/Strings.en-US.resx
+++ b/Travel-Company.WPF/Resources/Localizations/Strings.en-US.resx
@@ -117,11 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Authority" xml:space="preserve">
+    <value>Authority</value>
+  </data>
+  <data name="Birthdate" xml:space="preserve">
+    <value>Birthdate</value>
+  </data>
   <data name="ButtonAdd" xml:space="preserve">
     <value>Add</value>
   </data>
   <data name="ButtonCancel" xml:space="preserve">
     <value>Cancel</value>
+  </data>
+  <data name="ButtonChangePicture" xml:space="preserve">
+    <value>Change picture</value>
   </data>
   <data name="ButtonCreate" xml:space="preserve">
     <value>Create</value>
@@ -140,6 +149,9 @@
   </data>
   <data name="ButtonPenalties" xml:space="preserve">
     <value>Penalties</value>
+  </data>
+  <data name="ButtonRemovePicture" xml:space="preserve">
+    <value>Remove picture</value>
   </data>
   <data name="ButtonUpdate" xml:space="preserve">
     <value>Update</value>
@@ -168,8 +180,20 @@
   <data name="CreateCatalogHeader" xml:space="preserve">
     <value>Create Catalog</value>
   </data>
+  <data name="CreateClientHeader" xml:space="preserve">
+    <value>Create Client</value>
+  </data>
+  <data name="EditClientHeader" xml:space="preserve">
+    <value>Edit Client</value>
+  </data>
   <data name="Employees" xml:space="preserve">
     <value>Employees</value>
+  </data>
+  <data name="FirstName" xml:space="preserve">
+    <value>First name</value>
+  </data>
+  <data name="FullName" xml:space="preserve">
+    <value>Full name</value>
   </data>
   <data name="Groups" xml:space="preserve">
     <value>Groups</value>
@@ -177,14 +201,32 @@
   <data name="Hotels" xml:space="preserve">
     <value>Hotels</value>
   </data>
+  <data name="IssueDate" xml:space="preserve">
+    <value>Issue date</value>
+  </data>
+  <data name="LastName" xml:space="preserve">
+    <value>Last name</value>
+  </data>
   <data name="LoginHeaderTextBlock" xml:space="preserve">
     <value>Login</value>
   </data>
   <data name="PagesHeader" xml:space="preserve">
     <value>Pages</value>
   </data>
+  <data name="Passport" xml:space="preserve">
+    <value>Passport</value>
+  </data>
+  <data name="PassportNumber" xml:space="preserve">
+    <value>Passport number</value>
+  </data>
+  <data name="PassportSeries" xml:space="preserve">
+    <value>Passport series</value>
+  </data>
   <data name="PasswordTextBlockPlaceholder" xml:space="preserve">
     <value>Password</value>
+  </data>
+  <data name="Patronymic" xml:space="preserve">
+    <value>Patronymic</value>
   </data>
   <data name="Penalties" xml:space="preserve">
     <value>Penalties</value>
@@ -198,8 +240,20 @@
   <data name="SearchBarDefaultPlaceholder" xml:space="preserve">
     <value>Search</value>
   </data>
+  <data name="Street" xml:space="preserve">
+    <value>Street</value>
+  </data>
   <data name="Streets" xml:space="preserve">
     <value>Streets</value>
+  </data>
+  <data name="TextHidePassports" xml:space="preserve">
+    <value>Hide passports</value>
+  </data>
+  <data name="TextShowPassports" xml:space="preserve">
+    <value>Show passports</value>
+  </data>
+  <data name="TouristGroup" xml:space="preserve">
+    <value>Tourist group</value>
   </data>
   <data name="UpdateCatalogHeader" xml:space="preserve">
     <value>Update Catalog</value>
