--- a/Travel-Company.WPF/Resources/Localizations/Strings.ru-RU.resx
+++ b/Travel-Company.WPF/Resources/Localizations/Strings.ru-RU.resx
@@ -117,11 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Authority" xml:space="preserve">
+    <value>Кем выдан</value>
+  </data>
+  <data name="Birthdate" xml:space="preserve">
+    <value>Дата рождения</value>
+  </data>
   <data name="ButtonAdd" xml:space="preserve">
     <value>Добавить</value>
   </data>
   <data name="ButtonCancel" xml:space="preserve">
     <value>Отменить</value>
+  </data>
+  <data name="ButtonChangePicture" xml:space="preserve">
+    <value>Изменить фотографию</value>
   </data>
   <data name="ButtonCreate" xml:space="preserve">
     <value>Создать</value>
@@ -140,6 +149,9 @@
   </data>
   <data name="ButtonPenalties" xml:space="preserve">
     <value>Неустойки</value>
+  </data>
+  <data name="ButtonRemovePicture" xml:space="preserve">
+    <value>Удалить фотографию</value>
   </data>
   <data name="ButtonUpdate" xml:space="preserve">
     <value>Обновить</value>
@@ -168,8 +180,20 @@
   <data name="CreateCatalogHeader" xml:space="preserve">
     <value>Создание объекта справочника</value>
   </data>
+  <data name="CreateClientHeader" xml:space="preserve">
+    <value>Создание Клиента</value>
+  </data>
+  <data name="EditClientHeader" xml:space="preserve">
+    <value>Редактирование Клиента</value>
+  </data>
   <data name="Employees" xml:space="preserve">
     <value>Сотрудники</value>
+  </data>
+  <data name="FirstName" xml:space="preserve">
+    <value>Имя</value>
+  </data>
+  <data name="FullName" xml:space="preserve">
+    <value>Ф.И.О.</value>
   </data>
   <data name="Groups" xml:space="preserve">
     <value>Группы</value>
@@ -177,14 +201,32 @@
   <data name="Hotels" xml:space="preserve">
     <value>Гостиницы</value>
   </data>
+  <data name="IssueDate" xml:space="preserve">
+    <value>Дата выдачи</value>
+  </data>
+  <data name="LastName" xml:space="preserve">
+    <value>Фамилия</value>
+  </data>
   <data name="LoginHeaderTextBlock" xml:space="preserve">
     <value>Вход</value>
   </data>
   <data name="PagesHeader" xml:space="preserve">
     <value>Страницы</value>
   </data>
+  <data name="Passport" xml:space="preserve">
+    <value>Паспорт</value>
+  </data>
+  <data name="PassportNumber" xml:space="preserve">
+    <value>Номер паспорта</value>
+  </data>
+  <data name="PassportSeries" xml:space="preserve">
+    <value>Серия паспорта</value>
+  </data>
   <data name="PasswordTextBlockPlaceholder" xml:space="preserve">
     <value>Пароль</value>
+  </data>
+  <data name="Patronymic" xml:space="preserve">
+    <value>Отчество</value>
   </data>
   <data name="Penalties" xml:space="preserve">
     <value>Неустойки</value>
@@ -198,8 +240,20 @@
   <data name="SearchBarDefaultPlaceholder" xml:space="preserve">
     <value>Поиск</value>
   </data>
+  <data name="Street" xml:space="preserve">
+    <value>Улица</value>
+  </data>
   <data name="Streets" xml:space="preserve">
     <value>Улицы</value>
+  </data>
+  <data name="TextHidePassports" xml:space="preserve">
+    <value>Спрятать паспорты</value>
+  </data>
+  <data name="TextShowPassports" xml:space="preserve">
+    <value>Показать паспорты</value>
+  </data>
+  <data name="TouristGroup" xml:space="preserve">
+    <value>Туристическая группа</value>
   </data>
   <data name="UpdateCatalogHeader" xml:space="preserve">
     <value>Редактирование объекта справочника</value>
