--- a/Travel-Company.WPF/Resources/Localizations/Strings.ru-RU.resx
+++ b/Travel-Company.WPF/Resources/Localizations/Strings.ru-RU.resx
@@ -183,8 +183,14 @@
   <data name="CreateClientHeader" xml:space="preserve">
     <value>Создание Клиента</value>
   </data>
+  <data name="CreateEmployeeHeader" xml:space="preserve">
+    <value>Создание сотрудника</value>
+  </data>
   <data name="EditClientHeader" xml:space="preserve">
     <value>Редактирование Клиента</value>
+  </data>
+  <data name="EditEmployeeHeader" xml:space="preserve">
+    <value>Редактирование сотрудника</value>
   </data>
   <data name="Employees" xml:space="preserve">
     <value>Сотрудники</value>
@@ -236,6 +242,9 @@
   </data>
   <data name="Routes" xml:space="preserve">
     <value>Маршруты</value>
+  </data>
+  <data name="Salary" xml:space="preserve">
+    <value>Оклад</value>
   </data>
   <data name="SearchBarDefaultPlaceholder" xml:space="preserve">
     <value>Поиск</value>
