--- a/Travel-Company.WPF/Resources/Localizations/Strings.en-US.resx
+++ b/Travel-Company.WPF/Resources/Localizations/Strings.en-US.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Amount" xml:space="preserve">
+    <value>Amount</value>
+  </data>
   <data name="Authority" xml:space="preserve">
     <value>Authority</value>
   </data>
@@ -171,6 +174,9 @@
   <data name="CatalogsHeader" xml:space="preserve">
     <value>Catalogs</value>
   </data>
+  <data name="Client" xml:space="preserve">
+    <value>Client</value>
+  </data>
   <data name="Clients" xml:space="preserve">
     <value>Clients</value>
   </data>
@@ -186,11 +192,23 @@
   <data name="CreateEmployeeHeader" xml:space="preserve">
     <value>Create Employee</value>
   </data>
+  <data name="CreatePenaltyHeader" xml:space="preserve">
+    <value>Create Penalty</value>
+  </data>
+  <data name="Date" xml:space="preserve">
+    <value>Date</value>
+  </data>
+  <data name="Description" xml:space="preserve">
+    <value>Description</value>
+  </data>
   <data name="EditClientHeader" xml:space="preserve">
     <value>Edit Client</value>
   </data>
   <data name="EditEmployeeHeader" xml:space="preserve">
     <value>Edit Employee</value>
+  </data>
+  <data name="EditPenaltyHeader" xml:space="preserve">
+    <value>Edit Penalty</value>
   </data>
   <data name="Employees" xml:space="preserve">
     <value>Employees</value>
@@ -239,6 +257,9 @@
   </data>
   <data name="Places" xml:space="preserve">
     <value>Places</value>
+  </data>
+  <data name="Responsible" xml:space="preserve">
+    <value>Responsible</value>
   </data>
   <data name="Routes" xml:space="preserve">
     <value>Routes</value>
