feat: localize tourist groups, routes and datagrid

--- a/Travel-Company.WPF/Resources/Localizations/Strings.en-US.resx
+++ b/Travel-Company.WPF/Resources/Localizations/Strings.en-US.resx
@@ -123,11 +123,20 @@
   <data name="Authority" xml:space="preserve">
     <value>Authority</value>
   </data>
+  <data name="AvailableToAddText" xml:space="preserve">
+    <value>Available to add</value>
+  </data>
   <data name="Birthdate" xml:space="preserve">
     <value>Birthdate</value>
   </data>
   <data name="ButtonAdd" xml:space="preserve">
     <value>Add</value>
+  </data>
+  <data name="ButtonAddPlace" xml:space="preserve">
+    <value>Add place</value>
+  </data>
+  <data name="ButtonAddPlaceTooltip" xml:space="preserve">
+    <value>Add place to the route.</value>
   </data>
   <data name="ButtonCancel" xml:space="preserve">
     <value>Cancel</value>
@@ -144,17 +153,41 @@
   <data name="ButtonEdit" xml:space="preserve">
     <value>Edit</value>
   </data>
+  <data name="ButtonEditSelected" xml:space="preserve">
+    <value>Edit selected</value>
+  </data>
+  <data name="ButtonEditSelectedTooltip" xml:space="preserve">
+    <value>Edit selected place from the route.</value>
+  </data>
   <data name="ButtonFire" xml:space="preserve">
     <value>Fire</value>
   </data>
   <data name="ButtonLogIn" xml:space="preserve">
     <value>Enter</value>
   </data>
+  <data name="ButtonNewPlace" xml:space="preserve">
+    <value>New place</value>
+  </data>
+  <data name="ButtonNewPlaceTooltip" xml:space="preserve">
+    <value>Add a new place to the route.</value>
+  </data>
   <data name="ButtonPenalties" xml:space="preserve">
     <value>Penalties</value>
   </data>
   <data name="ButtonRemovePicture" xml:space="preserve">
     <value>Remove picture</value>
+  </data>
+  <data name="ButtonRemoveSelected" xml:space="preserve">
+    <value>Remove selected</value>
+  </data>
+  <data name="ButtonRemoveSelectedTooltip" xml:space="preserve">
+    <value>Remove selected place from the route.</value>
+  </data>
+  <data name="ButtonSavePlace" xml:space="preserve">
+    <value>Save place</value>
+  </data>
+  <data name="ButtonSavePlaceTooltip" xml:space="preserve">
+    <value>Save сhanges of the place.</value>
   </data>
   <data name="ButtonUpdate" xml:space="preserve">
     <value>Update</value>
@@ -180,8 +213,14 @@
   <data name="Clients" xml:space="preserve">
     <value>Clients</value>
   </data>
+  <data name="Cost" xml:space="preserve">
+    <value>Cost</value>
+  </data>
   <data name="Countries" xml:space="preserve">
     <value>Countries</value>
+  </data>
+  <data name="Country" xml:space="preserve">
+    <value>Country</value>
   </data>
   <data name="CreateCatalogHeader" xml:space="preserve">
     <value>Create Catalog</value>
@@ -195,8 +234,26 @@
   <data name="CreatePenaltyHeader" xml:space="preserve">
     <value>Create Penalty</value>
   </data>
+  <data name="CreateRouteHeader" xml:space="preserve">
+    <value>Create Route</value>
+  </data>
+  <data name="CreateTouristGroupHeader" xml:space="preserve">
+    <value>Create Tourist Group</value>
+  </data>
+  <data name="CurrentTouristsInTheGroupText" xml:space="preserve">
+    <value>Current tourists in the group</value>
+  </data>
+  <data name="DataGridNoRecordsText" xml:space="preserve">
+    <value>No records</value>
+  </data>
+  <data name="DataGridTouristGroups" xml:space="preserve">
+    <value>Tourist groups</value>
+  </data>
   <data name="Date" xml:space="preserve">
     <value>Date</value>
+  </data>
+  <data name="DepartureTime" xml:space="preserve">
+    <value>Departure time</value>
   </data>
   <data name="Description" xml:space="preserve">
     <value>Description</value>
@@ -210,8 +267,23 @@
   <data name="EditPenaltyHeader" xml:space="preserve">
     <value>Edit Penalty</value>
   </data>
+  <data name="EditRouteHeader" xml:space="preserve">
+    <value>Edit Route</value>
+  </data>
+  <data name="EditTouristGroupHeader" xml:space="preserve">
+    <value>Edit Tourist Group</value>
+  </data>
   <data name="Employees" xml:space="preserve">
     <value>Employees</value>
+  </data>
+  <data name="End" xml:space="preserve">
+    <value>End</value>
+  </data>
+  <data name="EndTime" xml:space="preserve">
+    <value>End time</value>
+  </data>
+  <data name="ExcursionProgram" xml:space="preserve">
+    <value>Excursion program</value>
   </data>
   <data name="FirstName" xml:space="preserve">
     <value>First name</value>
@@ -222,8 +294,14 @@
   <data name="Groups" xml:space="preserve">
     <value>Groups</value>
   </data>
+  <data name="Hotel" xml:space="preserve">
+    <value>Hotel</value>
+  </data>
   <data name="Hotels" xml:space="preserve">
     <value>Hotels</value>
+  </data>
+  <data name="InitialStayTime" xml:space="preserve">
+    <value>Initial stay time</value>
   </data>
   <data name="IssueDate" xml:space="preserve">
     <value>Issue date</value>
@@ -233,6 +311,9 @@
   </data>
   <data name="LoginHeaderTextBlock" xml:space="preserve">
     <value>Login</value>
+  </data>
+  <data name="Name" xml:space="preserve">
+    <value>Name</value>
   </data>
   <data name="PagesHeader" xml:space="preserve">
     <value>Pages</value>
@@ -255,11 +336,17 @@
   <data name="Penalties" xml:space="preserve">
     <value>Penalties</value>
   </data>
+  <data name="Place" xml:space="preserve">
+    <value>Place</value>
+  </data>
   <data name="Places" xml:space="preserve">
     <value>Places</value>
   </data>
   <data name="Responsible" xml:space="preserve">
     <value>Responsible</value>
+  </data>
+  <data name="Route" xml:space="preserve">
+    <value>Route</value>
   </data>
   <data name="Routes" xml:space="preserve">
     <value>Routes</value>
@@ -270,6 +357,12 @@
   <data name="SearchBarDefaultPlaceholder" xml:space="preserve">
     <value>Search</value>
   </data>
+  <data name="Start" xml:space="preserve">
+    <value>Start</value>
+  </data>
+  <data name="StartTime" xml:space="preserve">
+    <value>Start time</value>
+  </data>
   <data name="Street" xml:space="preserve">
     <value>Street</value>
   </data>
@@ -279,11 +372,20 @@
   <data name="TextHidePassports" xml:space="preserve">
     <value>Hide passports</value>
   </data>
+  <data name="TextPopulatedPlacesInTheRoute" xml:space="preserve">
+    <value>Populated places in the route</value>
+  </data>
   <data name="TextShowPassports" xml:space="preserve">
     <value>Show passports</value>
   </data>
   <data name="TouristGroup" xml:space="preserve">
     <value>Tourist group</value>
+  </data>
+  <data name="TouristGroups" xml:space="preserve">
+    <value>Tourist Groups</value>
+  </data>
+  <data name="Tourists" xml:space="preserve">
+    <value>Tourists</value>
   </data>
   <data name="UpdateCatalogHeader" xml:space="preserve">
     <value>Update Catalog</value>
