--- a/Travel-Company.WPF/Resources/Localizations/Strings.ru-RU.resx
+++ b/Travel-Company.WPF/Resources/Localizations/Strings.ru-RU.resx
@@ -123,11 +123,20 @@
   <data name="Authority" xml:space="preserve">
     <value>Кем выдан</value>
   </data>
+  <data name="AvailableToAddText" xml:space="preserve">
+    <value>Доступны для добавления</value>
+  </data>
   <data name="Birthdate" xml:space="preserve">
     <value>Дата рождения</value>
   </data>
   <data name="ButtonAdd" xml:space="preserve">
     <value>Добавить</value>
+  </data>
+  <data name="ButtonAddPlace" xml:space="preserve">
+    <value>Добавить пункт</value>
+  </data>
+  <data name="ButtonAddPlaceTooltip" xml:space="preserve">
+    <value>Добавить пункт в маршрут.</value>
   </data>
   <data name="ButtonCancel" xml:space="preserve">
     <value>Отменить</value>
@@ -144,17 +153,41 @@
   <data name="ButtonEdit" xml:space="preserve">
     <value>Изменить</value>
   </data>
+  <data name="ButtonEditSelected" xml:space="preserve">
+    <value>Редактировать пункт</value>
+  </data>
+  <data name="ButtonEditSelectedTooltip" xml:space="preserve">
+    <value>Редактировать выбранный пункт из маршрута.</value>
+  </data>
   <data name="ButtonFire" xml:space="preserve">
     <value>Уволить</value>
   </data>
   <data name="ButtonLogIn" xml:space="preserve">
     <value>Войти</value>
   </data>
+  <data name="ButtonNewPlace" xml:space="preserve">
+    <value>Создать пункт</value>
+  </data>
+  <data name="ButtonNewPlaceTooltip" xml:space="preserve">
+    <value>Добавить новый пункт в маршрут.</value>
+  </data>
   <data name="ButtonPenalties" xml:space="preserve">
     <value>Неустойки</value>
   </data>
   <data name="ButtonRemovePicture" xml:space="preserve">
     <value>Удалить фотографию</value>
+  </data>
+  <data name="ButtonRemoveSelected" xml:space="preserve">
+    <value>Удалить пункт</value>
+  </data>
+  <data name="ButtonRemoveSelectedTooltip" xml:space="preserve">
+    <value>Удалить выбранный пункт из маршрута.</value>
+  </data>
+  <data name="ButtonSavePlace" xml:space="preserve">
+    <value>Сохранить пункт</value>
+  </data>
+  <data name="ButtonSavePlaceTooltip" xml:space="preserve">
+    <value>Сохранить изменения маршрута.</value>
   </data>
   <data name="ButtonUpdate" xml:space="preserve">
     <value>Обновить</value>
@@ -180,8 +213,14 @@
   <data name="Clients" xml:space="preserve">
     <value>Клиенты</value>
   </data>
+  <data name="Cost" xml:space="preserve">
+    <value>Стоимость</value>
+  </data>
   <data name="Countries" xml:space="preserve">
     <value>Страны</value>
+  </data>
+  <data name="Country" xml:space="preserve">
+    <value>Страна</value>
   </data>
   <data name="CreateCatalogHeader" xml:space="preserve">
     <value>Создание объекта справочника</value>
@@ -195,8 +234,26 @@
   <data name="CreatePenaltyHeader" xml:space="preserve">
     <value>Создание Неустойки</value>
   </data>
+  <data name="CreateRouteHeader" xml:space="preserve">
+    <value>Создание Маршрута</value>
+  </data>
+  <data name="CreateTouristGroupHeader" xml:space="preserve">
+    <value>Создание туристической группы</value>
+  </data>
+  <data name="CurrentTouristsInTheGroupText" xml:space="preserve">
+    <value>Текущие туристы в группе</value>
+  </data>
+  <data name="DataGridNoRecordsText" xml:space="preserve">
+    <value>Нет записей</value>
+  </data>
+  <data name="DataGridTouristGroups" xml:space="preserve">
+    <value>Тур. группы</value>
+  </data>
   <data name="Date" xml:space="preserve">
     <value>Дата</value>
+  </data>
+  <data name="DepartureTime" xml:space="preserve">
+    <value>Время выезда из гостиницы</value>
   </data>
   <data name="Description" xml:space="preserve">
     <value>Описание</value>
@@ -210,8 +267,23 @@
   <data name="EditPenaltyHeader" xml:space="preserve">
     <value>Редактирование Неустойки</value>
   </data>
+  <data name="EditRouteHeader" xml:space="preserve">
+    <value>Редактирование Маршрута</value>
+  </data>
+  <data name="EditTouristGroupHeader" xml:space="preserve">
+    <value>Редактирование туристической группы</value>
+  </data>
   <data name="Employees" xml:space="preserve">
     <value>Сотрудники</value>
+  </data>
+  <data name="End" xml:space="preserve">
+    <value>Конец</value>
+  </data>
+  <data name="EndTime" xml:space="preserve">
+    <value>Конечное время</value>
+  </data>
+  <data name="ExcursionProgram" xml:space="preserve">
+    <value>Экскурсионная программа</value>
   </data>
   <data name="FirstName" xml:space="preserve">
     <value>Имя</value>
@@ -222,8 +294,14 @@
   <data name="Groups" xml:space="preserve">
     <value>Группы</value>
   </data>
+  <data name="Hotel" xml:space="preserve">
+    <value>Гостиница</value>
+  </data>
   <data name="Hotels" xml:space="preserve">
     <value>Гостиницы</value>
+  </data>
+  <data name="InitialStayTime" xml:space="preserve">
+    <value>Время заселения в гостиницу</value>
   </data>
   <data name="IssueDate" xml:space="preserve">
     <value>Дата выдачи</value>
@@ -233,6 +311,9 @@
   </data>
   <data name="LoginHeaderTextBlock" xml:space="preserve">
     <value>Вход</value>
+  </data>
+  <data name="Name" xml:space="preserve">
+    <value>Наименование</value>
   </data>
   <data name="PagesHeader" xml:space="preserve">
     <value>Страницы</value>
@@ -255,11 +336,17 @@
   <data name="Penalties" xml:space="preserve">
     <value>Неустойки</value>
   </data>
+  <data name="Place" xml:space="preserve">
+    <value>Пункт</value>
+  </data>
   <data name="Places" xml:space="preserve">
     <value>Пункты</value>
   </data>
   <data name="Responsible" xml:space="preserve">
     <value>Ответственное лицо</value>
+  </data>
+  <data name="Route" xml:space="preserve">
+    <value>Маршрут</value>
   </data>
   <data name="Routes" xml:space="preserve">
     <value>Маршруты</value>
@@ -270,6 +357,12 @@
   <data name="SearchBarDefaultPlaceholder" xml:space="preserve">
     <value>Поиск</value>
   </data>
+  <data name="Start" xml:space="preserve">
+    <value>Начало</value>
+  </data>
+  <data name="StartTime" xml:space="preserve">
+    <value>Начальное время</value>
+  </data>
   <data name="Street" xml:space="preserve">
     <value>Улица</value>
   </data>
@@ -279,11 +372,20 @@
   <data name="TextHidePassports" xml:space="preserve">
     <value>Спрятать паспорты</value>
   </data>
+  <data name="TextPopulatedPlacesInTheRoute" xml:space="preserve">
+    <value>Населенные пункты в маршруте</value>
+  </data>
   <data name="TextShowPassports" xml:space="preserve">
     <value>Показать паспорты</value>
   </data>
   <data name="TouristGroup" xml:space="preserve">
     <value>Туристическая группа</value>
+  </data>
+  <data name="TouristGroups" xml:space="preserve">
+    <value>Туристические группы</value>
+  </data>
+  <data name="Tourists" xml:space="preserve">
+    <value>Туристы</value>
   </data>
   <data name="UpdateCatalogHeader" xml:space="preserve">
     <value>Редактирование объекта справочника</value>
