--- a/Travel-Company.WPF/Resources/Localizations/Strings.ru-RU.resx
+++ b/Travel-Company.WPF/Resources/Localizations/Strings.ru-RU.resx
@@ -120,6 +120,9 @@
   <data name="Amount" xml:space="preserve">
     <value>Сумма</value>
   </data>
+  <data name="Arrive" xml:space="preserve">
+    <value>Заезд</value>
+  </data>
   <data name="ArrowButtonToLeft" xml:space="preserve">
     <value>Добавить выбранного туриста</value>
   </data>
@@ -258,6 +261,9 @@
   <data name="Date" xml:space="preserve">
     <value>Дата</value>
   </data>
+  <data name="Departure" xml:space="preserve">
+    <value>Выезд</value>
+  </data>
   <data name="DepartureTime" xml:space="preserve">
     <value>Время выезда из гостиницы</value>
   </data>
@@ -347,6 +353,9 @@
   </data>
   <data name="Places" xml:space="preserve">
     <value>Пункты</value>
+  </data>
+  <data name="Program" xml:space="preserve">
+    <value>Программа</value>
   </data>
   <data name="Responsible" xml:space="preserve">
     <value>Ответственное лицо</value>
