--- a/Travel-Company.WPF/Resources/Localizations/Strings.ru-RU.resx
+++ b/Travel-Company.WPF/Resources/Localizations/Strings.ru-RU.resx
@@ -171,6 +171,9 @@
   <data name="ButtonFire" xml:space="preserve">
     <value>Уволить</value>
   </data>
+  <data name="ButtonHideFiredEmployees" xml:space="preserve">
+    <value>Спрятать уволенных</value>
+  </data>
   <data name="ButtonLogIn" xml:space="preserve">
     <value>Войти</value>
   </data>
@@ -197,6 +200,9 @@
   </data>
   <data name="ButtonSavePlaceTooltip" xml:space="preserve">
     <value>Сохранить изменения маршрута.</value>
+  </data>
+  <data name="ButtonShowFiredEmployees" xml:space="preserve">
+    <value>Показать уволенных</value>
   </data>
   <data name="ButtonUpdate" xml:space="preserve">
     <value>Обновить</value>
@@ -297,6 +303,9 @@
   <data name="ExcursionProgram" xml:space="preserve">
     <value>Экскурсионная программа</value>
   </data>
+  <data name="FiredDate" xml:space="preserve">
+    <value>Дата увольнения</value>
+  </data>
   <data name="FirstName" xml:space="preserve">
     <value>Имя</value>
   </data>
@@ -314,6 +323,9 @@
   </data>
   <data name="InitialStayTime" xml:space="preserve">
     <value>Время заселения в гостиницу</value>
+  </data>
+  <data name="IsFired" xml:space="preserve">
+    <value>Уволен</value>
   </data>
   <data name="IssueDate" xml:space="preserve">
     <value>Дата выдачи</value>
