--- a/Travel-Company.WPF/Resources/Localizations/Strings.ru-RU.resx
+++ b/Travel-Company.WPF/Resources/Localizations/Strings.ru-RU.resx
@@ -409,7 +409,7 @@
     <value>Туристическая группа</value>
   </data>
   <data name="TouristGroups" xml:space="preserve">
-    <value>Туристические группы</value>
+    <value>Туристические Группы</value>
   </data>
   <data name="Tourists" xml:space="preserve">
     <value>Туристы</value>
